--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@cloudbase/cli": "^1.12.3",
-    "@vercel/analytics": "^1.1.1",
+    "@vercel/analytics": "1.1.1",
     "bootstrap": "^5.1.3",
     "cnchar": "^3.2.5",
     "cnchar-poly": "^3.2.5",
